@@ -1,3 +1,9 @@
+2012-07-24  Sean Keys  <skeys@ipdatasys.com>
+
+        * elf32-m68hc1x.c (elf32_m68hc11_relocate_section): Added code
+	that enables the linker to offset addresses, when linking against
+        symbols from the XGATE processor and vice versa.
+
 2012-07-23  Nick Clifton  <nickc@redhat.com>
 
 	* cisco-core.c (cisco_core_file_failing_command): Make static.
